--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <h1 class=" display-1 pt-5">Cakes for every occasion</h1>
             <hr class="my-4">
             <p class="display-5 m-3 p-3">We help you create perfect party</p>
-            <a class="btn btn-light btn-lg m-3 ps-4 pe-4" href="#" role="button">Discover more</a>
+            <a class="btn btn-light btn-lg m-3 ps-4 pe-4" href="#Tips&Tricks" role="button">Discover more</a>
         </div>
     </div>
 
